<resources>
    <string name="app_name">Talabat</string>
    <string name="Button_name">log in</string>
    <string name="title_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="open">"open"</string>
    <string name="close">"close"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_test">test</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="meal_image">Meal Image</string>
    <string name="todo">TODO</string>
    <string name="meal_name">Meal Name</string>
    <string name="meal_description">Meal Description</string>
    <string name="meal_price">Meal Price</string>
    <string name="confirm">Confirm</string>
    <string name="e_mail">E-mail</string>
    <string name="create_an_account">Create an account</string>
    <string name="talabat">Talabat</string>
    <string name="log_in">Log in</string>
    <string name="add_meal">Add Meal</string>
    <string name="zeroCount">0</string>
    <string name="zeroMoney">0$</string>
    <string name="update_data">Update Data</string>
    <string name="hi_guest">Hi Guest</string>
    <string name="customer">Customer</string>
    <string name="restaurant">Restaurant</string>
    <string name="welcome_to_talabat">Welcome to talabat</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="terms">Yes, I want to receive offers and discounts</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="quantity">Quantity:</string>
</resources>